# mimir

./: .gitignore  Cargo.toml  README.md
crates/mimir-ast/: Cargo.toml
crates/mimir-ast/src/: lib.rs
crates/mimir-gpu/: Cargo.toml
crates/mimir-gpu/src/: lib.rs
crates/mimir-ir/: Cargo.toml
crates/mimir-ir/src/: io.rs  ir.rs  kernel_ir.rs  lib.rs  safety.rs
crates/mimir-ir/src/passes/: mod.rs
crates/mimir-ir/src/passes/optimize/: mod.rs
crates/mimir-ir/src/passes/optimize/inline/: inline_expr.rs  mod.rs
crates/mimir-ir/src/passes/optimize/to_const/: mod.rs  pass.rs
crates/mimir-ir/src/passes/safety/: mod.rs
crates/mimir-ir/src/passes/safety/spec/: mod.rs
crates/mimir-ir/src/util/: builtin.rs  cast.rs  error.rs  math.rs  mod.rs  ty.rs
crates/mimir-macros/: Cargo.toml
crates/mimir-macros/src/: lib.rs
crates/mimir-omni-runtime/: Cargo.toml
crates/mimir-omni-runtime/src/: error.rs  lib.rs  mimir_gpu_arr.rs  mimir_kernel.rs
crates/mimir-rs-compiler/: Cargo.toml
crates/mimir-rs-compiler/src/compiler/: mod.rs
crates/mimir-rs-compiler/src/compiler/kernel_compiler/: binop.rs  for_loop.rs  if_else.rs  mod.rs  util.rs
crates/mimir-runtime/: Cargo.toml
crates/mimir-runtime/src/: lib.rs
crates/mimir-runtime/src/generic/: array.rs  compiler.rs  device.rs  launch.rs  mod.rs  runtime.rs
crates/mimir-vulkan/: Cargo.toml
crates/mimir-vulkan-spirv-compiler/: Cargo.toml
crates/mimir-vulkan-spirv-compiler/src/: lib.rs
crates/mimir-vulkan-spirv-compiler/src/vulkan_spirv_compiler/: builder_init.rs  compiler.rs  ir.rs  mod.rs  type_init.rs  util.rs
crates/mimir-vulkan-spirv-compiler/src/vulkan_spirv_compiler/ir_to_spirv/: assign.rs  if_stmt.rs  ir.rs  mod.rs  range_for.rs  syncthreads.rs
crates/mimir-vulkan-spirv-compiler/src/vulkan_spirv_compiler/ir_to_spirv/expr_to_spirv/: binop.rs  builtin.rs  cast.rs  expr.rs  index.rs  math_intrinsic.rs  mod.rs  unary.rs  var.rs
crates/mimir-vulkan-spirv-compiler/src/vulkan_spirv_compiler/params/: mod.rs
crates/mimir-vulkan-spirv-compiler/src/vulkan_spirv_compiler/preprocess/: mod.rs
crates/mimir-vulkan-spirv-compiler/src/vulkan_spirv_compiler/variables/: mod.rs  shared_mem.rs  var_util.rs
crates/mimir-vulkan/src/: lib.rs
crates/mimir-vulkan/src/array/: mod.rs
crates/mimir-vulkan/src/runtime/: error.rs  mod.rs  program.rs
crates/mimir-vulkan/src/runtime/jit/: mod.rs
crates/mimir-vulkan/src/vk_platform_device/: mod.rs
crates/mimir-vulkan/src/vulkan/: backend.rs  error.rs  mod.rs  program.rs  vulkan_array.rs  vulkan_kernel.rs
crates/spirv-compiler/: Cargo.toml
crates/spirv-compiler/src/: lib.rs
crates/spirv-compiler/src/spirv_compiler/: compiler.rs  ir.rs  ir_to_spirv.rs  to_ir.rs  util.rs
crates/spirv-compiler/src/spirv_compiler/build_ir/: binop.rs  branch.rs  for_loop.rs  mod.rs  param.rs
example/: Cargo.toml  debug.mimir.json
example/src/: main.rs
examples/matmul/: Cargo.toml
examples/matmul/src/: main.rs
examples/mnist/: .gitignore  Cargo.toml
examples/mnist/src/: kernel_performance_tests.rs  main.rs  mnist_nn.rs
mimir/: Cargo.toml
mimir-ast/: Cargo.toml
mimir-ast/src/: lib.rs
mimir-compiler/: Cargo.toml
mimir-compiler/src/: lib.rs
mimir-compiler/src/spirv_compiler/: binop.rs  compiler.rs  ir.rs  ir_to_spirv.rs  mod.rs  to_ir.rs  util.rs
mimir-compiler/src/spirv_compiler/build_ir/: binop.rs  for_loop.rs  mod.rs  param.rs
mimir/src/: example.mimir  lib.rs
