[package]
name = "mimir-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
mimir-ast = { path = "../mimir-ast" }
quote = "1.0"
syn = { version = "2.0.90", features = ["full"] }
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0"
rspirv = "0.12.0+sdk-1.3.268.0"
regex = "1.11.1"
ordered-float = "5.0.0"