[package]
name = "mimir-ir"
version = "0.1.0"
edition = "2021"
authors = ["Caleb Cleavinger caleb.cleavinger@gmail.com"]
description = "Intermediary Representation and other data structures for the Mimir GPU programming framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ccleavinger/mimir/tree/master/crates/mimir-ir"

[dependencies]
# reflection
serde = "1.0.228"
postcard = {version = "1.1.3", features = ["alloc"] }

# Util
thiserror = "2.0"

# Rust AST stuff
quote = "1.0.44"
cfg-if = "1.0.4"

# Optimiazation
likely_stable = "0.1.3"