[package]
name = "mimir-runtime"
version = "0.1.0"
edition = "2024"
authors = ["Caleb Cleavinger caleb.cleavinger@gmail.com"]
description = "Runtime traits for the Mimir GPU programming framework"
license = "MIT or Apache-2.0"
repository = "https://github.com/ccleavinger/mimir/tree/master/crates/mimir-runtime"

[dependencies]
mimir-ast = { path = "../mimir-ast" }
serde = "1.0.219"