[package]
name = "mimir-vulkan"
version = "0.1.0"
edition = "2024"
authors = ["Caleb Cleavinger caleb.cleavinger@gmail.com"]
description = "Vulkan backend for the Mimir GPU programming framework"
license = "MIT or Apache-2.0"
repository = "https://github.com/ccleavinger/mimir/tree/master/crates/mimir-vulkan"

[dependencies]
spirv-compiler = { path = "../spirv-compiler"}
mimir-ast = { path = "../mimir-ast" }
mimir-runtime = { path = "../mimir-runtime" }
ash = "0.38.0"
vk-mem = "0.4"
futures = "0.3.31"
serde = "1.0.219"
libc = "0.2"
log = "0.4"
thiserror = "2.0.12"