[package]
name = "spirv-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Caleb Cleavinger caleb.cleavinger@gmail.com"]
description = "SPIR-V compiler, essential part of the Vulkan backend for the Mimir GPU programming framework"
license = "MIT or Apache-2.0"
repository = "https://github.com/ccleavinger/mimir/tree/master/crates/spirv-compiler"

[dependencies]
mimir-ast = { path = "../mimir-ast" }
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }
rspirv = "0.12.0"
regex = "1.11.1"
anyhow = "1.0.98"