[package]
name = "matmul"
version = "0.1.0"
edition = "2021"
license.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimir-macros = { path = "../../crates/mimir-macros" }
mimir-omni-runtime = { path = "../../crates/mimir-omni-runtime" }
rand = "0.9.1"
